gitops/staging/iddh-members/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: iddh-members-staging
  name: iddh-members
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iddh-members
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: iddh-members
    spec:
      imagePullSecrets:
      - name: ghcr-credentials
      containers:
      - name: iddh-members
        image: ghcr.io/iddh-com-br/members:staging
        ports:
        - containerPort: 4000
          name: http
        startupProbe:
          httpGet:
            path: /health
            port: 4000
          periodSeconds: 2
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          periodSeconds: 5
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: iddh-members
  namespace: iddh-members-staging
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: iddh-members
---
apiVersion: v1
kind: Service
metadata:
  name: cluster
  namespace: iddh-members-staging
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: iddh-members
